# BibliotekaNumeryczna

./: CMakeLists.txt  README.md  example_engineering_problem.cpp
examples/: CMakeLists.txt  example_engineering_problem.cpp  example_math_functions.cpp
include/NumLibCpp/: approximation.hpp  differentialEquations_solver.hpp  differentiation.hpp  integration.hpp  interpolation.hpp  linear_solver.hpp  nonlinear_solver.hpp
src/: approximation.cpp  differentialEquations_solver.cpp  differentiation.cpp  integration.cpp  interpolation.cpp  linear_solver.cpp  nonlinear_solver.cpp
tests/: CMakeLists.txt  main.cpp  test_helpers.hpp
